k8s/ingress/grafana.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
spec:
  rules:
    - host: grafana.garyks
      http:
        paths:
        - backend:
            service:
              name: grafana
              port:
                number: 3000
          path: /
          pathType: ImplementationSpecific
    - host: prometheus.garyks
      http:
        paths:
        - backend:
            service:
              name: prometheus-k8s
              port:
                number: 9090
          path: /
          pathType: ImplementationSpecific
